[gd_scene load_steps=16 format=3 uid="uid://ccpokifvegaoy"]

[ext_resource type="Script" path="res://engine/entities/entity.gd" id="1_du6w5"]
[ext_resource type="Script" path="res://engine/abstract_classes/entity_move_bus.gd" id="2_7fq8g"]
[ext_resource type="Material" uid="uid://cqohlfxpaw7m3" path="res://engine/entities/generic_entity.tres" id="3_7ta7w"]
[ext_resource type="Texture2D" uid="uid://b6ncl0upg0ika" path="res://assets/UI/entity_dot.png" id="4_rnyj7"]
[ext_resource type="Texture2D" uid="uid://crqjoqrvax88f" path="res://assets/UI/blue_icons/ArrowUpIconBlue.png" id="5_pq53b"]
[ext_resource type="Texture2D" uid="uid://dp8he1xlfl6bv" path="res://assets/UI/white_circle_2.png" id="6_1fpi7"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8wa36"]

[sub_resource type="SphereMesh" id="SphereMesh_0u415"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e0wf7"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_sbk4o"]
custom_solver_bias = 1.0
radius = 0.1

[sub_resource type="FogMaterial" id="FogMaterial_2rtqc"]
resource_local_to_scene = true
density = 8.134
albedo = Color(0, 0.818736, 0.815349, 1)
height_falloff = 2.0
edge_fade = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_54rvg"]
radius = 3.0
height = 6.0

[sub_resource type="SphereMesh" id="SphereMesh_pcy2y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ls7x1"]
transparency = 1
cull_mode = 2
albedo_color = Color(0, 0.815686, 0.792157, 1)
albedo_texture = ExtResource("6_1fpi7")
emission = Color(0, 0.815686, 0.792157, 1)
emission_energy_multiplier = 6.0

[sub_resource type="QuadMesh" id="QuadMesh_v1582"]
size = Vector2(2, 2)

[node name="Entity" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100.25, 0, 0)
collision_layer = 6
collision_mask = 6
physics_material_override = SubResource("PhysicsMaterial_8wa36")
continuous_cd = true
contact_monitor = true
script = ExtResource("1_du6w5")
base_color = Color(0.913867, 0.546384, 0.919942, 1)

[node name="EntityMesh" type="MeshInstance3D" parent="."]
visible = false
gi_mode = 2
mesh = SubResource("SphereMesh_0u415")
skeleton = NodePath("")

[node name="NavArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="EntityNavShape" type="CollisionShape3D" parent="NavArea"]
shape = SubResource("SphereShape3D_e0wf7")

[node name="EntityMoveBus" type="Node3D" parent="."]
script = ExtResource("2_7fq8g")

[node name="EntityShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_sbk4o")

[node name="MarkerSprite" type="Sprite3D" parent="."]
material_overlay = ExtResource("3_7ta7w")
modulate = Color(0, 0.815686, 0.792157, 1)
shaded = true
alpha_antialiasing_mode = 1
texture = ExtResource("4_rnyj7")

[node name="FogVolume" type="FogVolume" parent="MarkerSprite"]
size = Vector3(1, 1, 1)
shape = 0
material = SubResource("FogMaterial_2rtqc")

[node name="OmniLight3D" type="OmniLight3D" parent="MarkerSprite/FogVolume"]
visible = false
light_color = Color(0.928687, 0.35569, 0.750399, 1)
omni_range = 4.65

[node name="HeadingSprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.0259705, 0.610446, 0.0667473)
layers = 3
texture = ExtResource("5_pq53b")

[node name="RangeSpot" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.13916)
visible = false
layers = 3
light_color = Color(0.774024, 0.045353, 0.588677, 1)
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.265
spot_range = 20.808
spot_attenuation = -4.0
spot_angle = 55.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RangeSpot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60515e-07, 0, -3.67215)
layers = 2
cast_shadow = 3
mesh = SubResource("SphereMesh_54rvg")
skeleton = NodePath("../../Spotlight")

[node name="Spotlight" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.02185)
layers = 3
light_color = Color(0, 0.816604, 0.791994, 1)
light_energy = 2.0
light_cull_mask = 4294966275
shadow_enabled = true
shadow_bias = 0.265
spot_attenuation = -1.78
spot_angle = 10.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spotlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.67435e-08, 0, -3.06942)
visible = false
layers = 2
cast_shadow = 3
mesh = SubResource("SphereMesh_pcy2y")
skeleton = NodePath("../../RangeSpot")

[node name="Sprite3D" type="Sprite3D" parent="."]
visible = false
modulate = Color(0, 1, 1, 1)
texture = ExtResource("6_1fpi7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_ls7x1")
mesh = SubResource("QuadMesh_v1582")

[node name="EntityBehavior" type="Node3D" parent="."]

[node name="EntityCargo" type="Node3D" parent="."]

[node name="EntityAttributes" type="Node3D" parent="."]
